--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.1.2",
+    "@radix-ui/react-toast": "^1.1.4",
     "@stitches/react": "^1.2.8",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
@@ -24,7 +25,8 @@
     "react-dom": "18.2.0",
     "stitches": "^1.2.11",
     "stripe": "^12.6.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "use-shopping-cart": "^3.1.7"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0"
